--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>google-api-services-calendar</artifactId>
 			<version>v3-rev94-1.19.0</version>
 		</dependency>
+		<dependency>
+      		<groupId>com.google.apis</groupId>
+      		<artifactId>google-api-services-drive</artifactId>
+      		<version>v2-rev143-1.19.0</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
