--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "angular": "1.3.0-rc.0",
-    "angular-material": "~0.0.2",
+    "angular-material": "0.0.2",
     "angular-animate": "~1.2.23",
     "angular-route": "~1.2.23"
   },
