--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,12 @@
   ],
   "private": true,
   "dependencies": {
-    "angular": "1.3.0-rc.0",
-    "angular-material": "0.0.2",
-    "angular-animate": "~1.2.23",
-    "angular-route": "~1.2.23"
+    "angular-material": "~0.0.3",
+    "angular-route": "~1.2.26",
+    "angular-animate": "~1.2.26"
   },
   "resolutions": {
-    "angular-animate": "~1.2.23",
-    "angular": "^1.3.x"
+    "angular": "1.3.0-rc.4",
+    "angular-animate": "^1.3.0-beta.18"
   }
 }
