--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,10 @@
   ],
   "private": true,
   "dependencies": {
-    "angular-material": "~0.0.3",
     "angular-route": "~1.2.26",
-    "angular-animate": "~1.2.26"
+    "angular-animate": "~1.2.26",
+    "angular-material": "v0.4",
+    "angular-aria": "~1.3.0-rc.4"
   },
   "resolutions": {
     "angular": "1.3.0-rc.4",
