--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,15 @@
   ],
   "private": true,
   "dependencies": {
-    "angular-route": "~1.2.26",
-    "angular-animate": "~1.2.26",
+    "angular": "~1.3.0-rc.5",
+    "angular-route": "~1.3.0-rc.5",
+    "angular-animate": "~1.3.0-rc.5",
     "angular-material": "v0.4",
-    "angular-aria": "~1.3.0-rc.4"
+    "angular-aria": "~1.3.0-rc.5"
   },
   "resolutions": {
-    "angular": "1.3.0-rc.4",
-    "angular-animate": "^1.3.0-beta.18"
+    "angular-aria": "~1.3.0-rc.5",
+    "angular-animate": "~1.3.0-rc.5",
+    "angular": "~1.3.0-rc.5"
   }
 }
