--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-route": "~1.3.0-rc.5",
     "angular-animate": "~1.3.0-rc.5",
     "angular-material": "v0.4",
-    "angular-aria": "~1.3.0-rc.5"
+    "angular-aria": "~1.3.0-rc.5",
+    "lodash": "~2.4.1",
+    "angular-filter": "~0.4.7"
   },
   "resolutions": {
     "angular-aria": "~1.3.0-rc.5",
