--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-material": "v0.4",
     "angular-aria": "~1.3.0-rc.5",
     "angular-filter": "~0.4.7",
-    "angular-elastic": "~2.4.0"
+    "angular-elastic": "~2.4.0",
+    "angular-sanitize": "~1.3.0"
   },
   "resolutions": {
     "angular-aria": "~1.3.0-rc.5",
