--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<version>1.18.0-rc</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson</artifactId>
+			<version>1.19.0</version>
+		</dependency>		
+		<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-calendar</artifactId>
 			<version>v3-rev94-1.19.0</version>
