project initialization ok

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
     	<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-admin</artifactId>
-			<version>directory_v1-rev29-1.14.2-beta</version>
+			<version>directory_v1-rev32-1.16.0-rc</version>
 		</dependency>
     	<dependency>
       		<groupId>com.googlecode.objectify</groupId>
