--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<appengine.target.version>1.9.10</appengine.target.version>
-		<appengine.app.version>teampot-v0-0-1</appengine.app.version>
+		<appengine.app.version>v0-0-2</appengine.app.version>
 	</properties>
 
 	<dependencies>
