maven, please do not mess .p12 files!

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,9 @@
 							<directory>${basedir}/src/main/webapp/WEB-INF</directory>
 							<filtering>true</filtering>
 							<targetPath>WEB-INF</targetPath>
+							<excludes>
+								<exclude>**/*.p12</exclude>
+							</excludes>
 						</resource>
 					</webResources>
 				</configuration>
