Google Groups settings

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-groupssettings</artifactId>
+			<version>v1-rev54-1.19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-plus</artifactId>
 			<version>v1-rev187-1.19.0</version>
 		</dependency>
