--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<appengine.target.version>1.9.15</appengine.target.version>
-		<appengine.app.version>v0-0-4</appengine.app.version>
+		<appengine.app.version>v0-0-5</appengine.app.version>
 	</properties>
 
 	<dependencies>
@@ -100,10 +100,15 @@
       		<version>2.1.2</version>
     	</dependency>
     	<dependency>
-    	<groupId>de.danielbechler</groupId>
+    		<groupId>de.danielbechler</groupId>
       		<artifactId>java-object-diff</artifactId>
       		<version>0.90</version>
     	</dependency>
+    	<dependency>
+	      		<groupId>org.apache.velocity</groupId>
+	      		<artifactId>velocity</artifactId>
+	      		<version>1.7</version>
+    	</dependency>	
 	</dependencies>
 
 	<build>
