--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-aria": "~1.3.5",
     "angular-filter": "~0.5.1",
     "angular-elastic": "~2.4.2",
-    "angular-sanitize": "~1.3.5"
+    "angular-sanitize": "~1.3.5",
+    "angular-datepicker": "~1.0.3"
   }
 }
