--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
       		<version>1.7</version>
     	</dependency>
     	<dependency>
+      		<groupId>org.apache.commons</groupId>
+      		<artifactId>commons-email</artifactId>
+      		<version>1.3.3</version>
+      	</dependency>
+    	<dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-bigquery</artifactId>
             <version>v2-rev158-1.19.0</version>
