--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,18 +2,20 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	
 	<servlet>
 		<servlet-name>SystemServiceServlet</servlet-name>
 		<servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
 		<init-param>
 			<param-name>services</param-name>
-			<param-value>com.google.teampot.api.ProjectEndpoint,com.google.teampot.api.UserEndpoint,com.google.teampot.api.TaskEndpoint,com.google.teampot.api.ActivityEndpoint,com.google.teampot.api.GAEEndpoint,com.google.teampot.api.MeetingEndpoint,com.google.teampot.api.AppEndpoint</param-value>
+			<param-value>com.google.teampot.api.ProjectEndpoint,com.google.teampot.api.UserEndpoint,com.google.teampot.api.TaskEndpoint,com.google.teampot.api.ActivityEndpoint,com.google.teampot.api.WebhookEndpoint,com.google.teampot.api.MeetingEndpoint,com.google.teampot.api.AppEndpoint</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SystemServiceServlet</servlet-name>
 		<url-pattern>/_ah/spi/*</url-pattern>
 	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>MailHandlerServlet</servlet-name>
 		<servlet-class>com.google.teampot.servlet.MailHandlerServlet</servlet-class>
@@ -22,6 +24,40 @@
 		<servlet-name>MailHandlerServlet</servlet-name>
 		<url-pattern>/_ah/mail/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>WatchFolderChangesServlet</servlet-name>
+		<servlet-class>com.google.teampot.servlet.task.WatchFolderChangesServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>WatchFolderChangesServlet</servlet-name>
+		<url-pattern>/gae/task/watchFolderChanges</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>PollEndServlet</servlet-name>
+		<servlet-class>com.google.teampot.servlet.task.PollEndServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PollEndServlet</servlet-name>
+		<url-pattern>/gae/task/pollEnd</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>ProvisionUserProfileServlet</servlet-name>
+		<servlet-class>com.google.teampot.servlet.task.ProvisionUserProfileServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ProvisionUserProfileServlet</servlet-name>
+		<url-pattern>/gae/task/provisionUserProfile</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UpdateAnalyticsServlet</servlet-name>
+		<servlet-class>com.google.teampot.servlet.task.UpdateAnalyticsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UpdateAnalyticsServlet</servlet-name>
+		<url-pattern>/gae/task/updateAnalytics</url-pattern>
+	</servlet-mapping>
+	
 	<filter>
 		<filter-name>ObjectifyFilter</filter-name>
 		<filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
@@ -30,6 +66,7 @@
 		<filter-name>ObjectifyFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>all</web-resource-name>
@@ -42,13 +79,15 @@
 	<security-constraint>
 	    <web-resource-collection>
 	        <web-resource-name>cron</web-resource-name>
-	        <url-pattern>/_ah/api/teampot/v1/gae/cron/*</url-pattern>
+	        <url-pattern>/gae/task/*</url-pattern>
 	    </web-resource-collection>
 	    <auth-constraint>
 	        <role-name>admin</role-name>
 	    </auth-constraint>
 	</security-constraint>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
+	
 </web-app>
