--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular": "~1.3.5",
     "angular-route": "~1.3.5",
     "angular-animate": "~1.3.5",
+    "angular-touch": "~1.3.5",
     "angular-material": "v0.6",
     "angular-aria": "~1.3.5",
     "angular-filter": "~0.5.1",
