--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-filter": "~0.5.1",
     "angular-elastic": "~2.4.2",
     "angular-sanitize": "~1.3.5",
-    "angular-datepicker": "~1.0.3"
+    "angular-datepicker": "~1.0.3",
+    "material-design-iconic-font": "zavoloklom/material-design-iconic-font#~1.1.1"
   }
 }
