--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "angular-route": "~1.3.5",
     "angular-animate": "~1.3.5",
     "angular-touch": "~1.3.5",
-    "angular-material": "~0.6.1",
+    "angular-material": "v0.6.0",
     "angular-aria": "~1.3.5",
     "angular-filter": "~0.5.1",
     "angular-elastic": "~2.4.2",
